[package]
name = "checks"
version = "1.0.2"
edition = "2021"
authors = ["deotime"]
description = "Checks based on https://www.reddit.com/r/rust/comments/gt067a/implementing_a_trait_only_for_types_satisfying_a/"
repository = "https://github.com/DeoTimeTheGithubUser/checks"
license = "MIT"
keywords = ["checking", "const-generics", "utility", "no_std"]
categories = ["no-std"]