[package]
name = "checks"
version = "1.0.5"
edition = "2021"
authors = ["deotime"]
description = "Adds several compile time checks for const generics"
repository = "https://github.com/DeoTimeTheGithubUser/checks"
license = "MIT"
keywords = ["checking", "const-generics", "utility", "no_std"]
categories = ["no-std"]